# mac_app_bundler

./: Cargo.toml  README.md
assets/: Info.plist
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/src/: main.rs
src/: lib.rs  main.rs
