[package]
name = "gui"
version = "0.1.0"
authors = ["einzigartigerName <nelson.gillo@gmx.de>"]
edition = "2018"

[dependencies]
app_bundler = {version = "0.1.0", path = "../" }
iced = { version = "0.2.0", features = ["image"] }
nfd = "0.0.4"
rust-embed = "5.6.0"

[[bin]]
name = "app-bundler-gui"
path = "src/main.rs"
